# AI-Data-Engineer-Basics

./: README.md  pyproject.toml
CH-2_RAG/: RAG.ipynb
LangChain/CH-2/: 1_first_chain.ipynb
RAGCode/: 1.0_RAG_With_Own_Text.ipynb
