[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "pypdf>=6.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
